--- a/sections/Diverses.tex
+++ b/sections/Diverses.tex
@@ -14,10 +14,9 @@
   \end{multicols}    	
     
 \subsection{Zeigerdiagramme}
-  Soll zu einem gegebenen Blockschaldbild (oder einer gegebenen Funktion) das Zeigerdiagramm erstellt 
+  Soll zu einem gegebenen Blockschaltbild (oder einer gegebenen Funktion) das Zeigerdiagramm erstellt 
   werden, werden die \textbf{Beträge} der Elemente \textbf{multipliziert} und
-  die \textbf{Winkel} ($arg()$) \textbf{addiert}. Die Werte für die einzelnen Elemente sind der Tabelle in Kap 1.1 LTI-  
-  Grundglieder zu entnehmen. 
+  die \textbf{Winkel} ($arg()$) \textbf{addiert}. Die Werte für die einzelnen Elemente sind der Tabelle in Kap.\ref{subsec:LTI-Grundglieder} \nameref{subsec:LTI-Grundglieder} zu entnehmen. 
 
 \begin{multicols}{2}
   \subsection{Graphisch Phasen-/Verstärkungsreserve}
@@ -27,12 +26,12 @@
 \columnbreak
 
   \subsection{Störgrössenaufschaltung \formelbuch{204}}
-    Bei der Strögrössenaufschaltung wird auch die Hauptstörung (Last) gemessen und verarbeitet.\\
+    Bei der Störgrössenaufschaltung wird auch die Hauptstörung (Last) gemessen und verarbeitet.\\
     \textbf{Merkmale:}
     \begin{itemize}[leftmargin=*]
       \item Hauptstörung wird früher erkannt, was die Regelgeschwindigkeit stark verbessert.
       \item Für die Genauigkeit sorgt weiterhin der Regelkreis. Weitere Störungen werden damit auskorrigiert.
-      \item Das Führungsverhalten wird druch die Strögrössenaufschaltung nicht beeinflusst. Somit auch nicht
+      \item Das Führungsverhalten wird durch die Störgrössenaufschaltung nicht beeinflusst. Somit auch nicht
             die Stabilität der Regelung.
       \item Die Zeitverzögerung zwischen Störort und Aufschaltort soll gering sein.
     \end{itemize}
