--- a/tikz/DGliedBode.tex
+++ b/tikz/DGliedBode.tex
@@ -22,7 +22,7 @@
 \begin{scope}[shift={(0,-2.2)}]
 	%% Koordinatensystem
 	\draw[thick, ->] (-0.1,-0.3) node[left] {$0^\circ$} -- +(3.5,0) node[right] {$\omega T_0$};
-	\draw[thick, ->] (0,-1) -- (0,0.5) node[right] {$argG$};
+	\draw[thick, ->] (0,-1) -- (0,0.5) node[right] {$arg(G)$};
 	\draw[dashed,gray] (0,0.2) node[left, black] {$90^\circ$} -- +(3.5,0);
 	\draw[dashed,gray] (0,-0.8) node[left, black] {$-90^\circ$} -- +(3.5,0);
 	\draw[dashed, gray] (1,-1) node[below, black] {$0.1$} -- +(0,1.2);
