--- a/tikz/PGliedBode.tex
+++ b/tikz/PGliedBode.tex
@@ -21,7 +21,7 @@
 \begin{scope}[shift={(0,-1.8)}]
 	%% Koordinatensystem
 	\draw[thick, ->] (-0.1,0) node[left] {$0^\circ$} -- (3.5,0) node[right] {$\omega T_0$};
-	\draw[thick, ->] (0,-1) -- (0,0.5) node[right] {$argG=0$};
+	\draw[thick, ->] (0,-1) -- (0,0.5) node[right] {$arg(G)=0$};
 	\draw[dashed] (0,-0.6) node[left] {$-90^\circ$} -- (3.5,-0.6);
 	\draw[dashed] (1,-1) node[below] {$0.1$} -- +(0,1.2);
 	\draw[dashed] (2,-1) node[below] {$1$} -- +(0,1.2);
