--- a/tikz/PT1GliedBode.tex
+++ b/tikz/PT1GliedBode.tex
@@ -25,7 +25,7 @@
 %% Phase
 \begin{scope}[shift={(0,-2.2)}]
 	%% Koordinatensystem
-	\draw[thick, ->] (0,-1) -- (0,0.5) node[right] {$argG$};
+	\draw[thick, ->] (0,-1) -- (0,0.5) node[right] {$arg(G)$};
 	\draw[dashed, gray] (1,-1) node[below, black] {$0.1$} -- +(0,1.2);
 	\draw[dashed,gray] (2,-1) node[below, black] {$1$} -- +(0,1.2);
 	\draw[dashed,gray] (3,-1) node[below, black] {$10$} -- +(0,1.2);
