--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -1,5 +1,5 @@
-\section{Gegenkopplung und Stabilität \formelbuch{107}}
-	\subsection{LTI-Grundglieder \formelbuch{124 \& 379}}
+\section{Gegenkopplung und Stabilität \formelbuch{106}}
+	\subsection{LTI-Grundglieder \formelbuch{115 \& 201}}
 	\label{subsec:LTI-Grundglieder}	
 		\begin{longtable}{|c|c|l|}
         	\specialrule{2pt}{0pt}{0pt}
@@ -203,7 +203,7 @@
 
 	\newpage
 
-	\subsection{Stabilitätsproblem \formelbuch{108}}
+	\subsection{Stabilitätsproblem \formelbuch{107}}
 	\begin{multicols}{2}	
         
         \textbf{P-Glied mit Totzeit gegengekoppelt \formelbuch{109}}\\
@@ -223,7 +223,7 @@
 	\end{multicols}
 	Zur Instabilität führt das Zusammenwirken von Verstärkung und Signalverzögerung. Dabei ist die Reihenfolge der Glieder beliebig. Entscheidend sind gesamte Verstärkung ($=$ Kreisverstärkung) und gesamte Verzögerung ($=$ Kreisverzögerung) im offenen Regelkreis.
 
-	\subsection{Nyquistkriterium \formelbuch{129}}
+	\subsection{Nyquistkriterium \formelbuch{125\&128}}
 		\begin{minipage}{8cm}
 			\includegraphics[width = 7.5cm]{./images/Nyquistkurve}
 		\end{minipage}
@@ -234,7 +234,7 @@
 		\end{minipage}
 		 
 		
-	\subsection{Phasenreserve und Verstärkungsreserve \formelbuch{132}}
+	\subsection{Phasenreserve und Verstärkungsreserve \formelbuch{128-129}}
 		\begin{tabular}{l|ll}
 			$K_RK_{Rres}=K_{R\pi}$ & $K_R$ & Reglerverstärkung ($K_R < K_{R\pi} \rightarrow$ Regelung stabil, $K_R > K_{R\pi} \rightarrow$ Regelung
 			instabil	) \\
@@ -248,7 +248,7 @@
 			\includegraphics[width=6.5cm]{./images/phasenreserve.png}
 		\end{minipage}
 		\begin{minipage}{11cm}
-			\subsubsection{Vorgehen beim Einstellen von P-Regler \formelbuch{133}}
+			\subsubsection{Vorgehen beim Einstellen von P-Regler}
 			\textbf{Geg:} $\Phi_{res}$
 			\begin{enumerate}
 				\item Mit $argG_o(\omega_D) = -\pi + \Phi_{res} \rightarrow$ Durchtrittsfrequenz bestimmen.
@@ -263,8 +263,8 @@
 		\end{minipage}
         
 			
-	\subsection{Sprungantwort und Stabilität \formelbuch{135}}
-		\subsubsection{Stabilitätssatz für ein geschlossenes System 2. Ordnung \formelbuch{137}}
+	\subsection{Sprungantwort und Stabilität}
+		\subsubsection{Stabilitätssatz für ein geschlossenes System 2. Ordnung \formelbuch{141}}
 			Ein System 2. Ordnung ist genau dann stabil, wenn {\bf alle} Koeffizienten der
 			homogenen DGL positiv und ungleich 0 sind.\\
 			$\ddot{y}+a_1\dot{y}+a_0y=F(u)$ \\
