Verweis auf Skript gelöscht
Skriptseite existiert nicht mehr.

--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -209,7 +209,7 @@
   \parbox{5cm}{$\Rightarrow \boxed{T_C = T_V\dfrac{1}{4 \ldots \text{bis } 50}}$}
   \parbox{14cm}{Empirische Einstellregeln ergeben in der Praxis nicht immer das bestmögliche Zeitverhalten, sondern sie liefern eine erste Einstellung, welche experimentell noch verbessert werden kann.} \\ \\
   
-  Um Ausschläge im Stellsignal, welche durch die typische Reaktion eines $DT_1$ auf einen Sprung verursacht werden, zu verhindern, darf man die Führungsgrösse $r$ nicht über den Differenzierer leiten. Dies wird mit der Reglerstruktur auf \formelbuch{194} erreicht. 
+  Um Ausschläge im Stellsignal, welche durch die typische Reaktion eines $DT_1$ auf einen Sprung verursacht werden, zu verhindern, darf man die Führungsgrösse $r$ nicht über den Differenzierer leiten.
 
 
 	\subsection{Wind-Up \formelbuch{170}}
