--- a/tex/grundglieder.tex
+++ b/tex/grundglieder.tex
@@ -1,148 +1,289 @@
-\section{LTI-Grundglieder \formelbuch{115 \& 201}}
-\label{subsec:LTI-Grundglieder}	
-	\begin{longtable}{|c|c|l|}
-		\specialrule{2pt}{0pt}{0pt}
-		{\bf Typ} & {\it Symbol} & {\it Gleichung, DGL}\\
-		 & & {\it Sprungantwort}\\
-		 & & {\it Frequenzgang, Betrag und Argument}\\ \cline{2-3}
-		 & Strukturbild & {\it Nyquistdiagramm} -- {\it Bodediagramm}\\
-		\specialrule{2pt}{0pt}{0pt}
-		
-		
-		%P-Glied
-		P & \parbox[c][2cm]{3cm}{\input{./tikz/PGlied}}
-		&
-		\begin{tabular}{lll}
-			$y = Ku$		&							& \\
-			$u=1(t)$		& $y=K 1(t)$				& \\
-			$G(j \omega)=K$	& $\left| G \right| = K$	& $arg(G)=0$ \\
-		\end{tabular} 
-		\\ \cline{2-3}
-		& \parbox[c][2cm]{3cm}{\input{./tikz/PGliedStruktur}}
-		& 
-		\parbox[c]{3cm}{\input{./tikz/PGliedNyquist}} \quad
-		\parbox[c]{6cm}{\input{./tikz/PGliedBode}}			 
-		\\
-		\specialrule{2pt}{0pt}{0pt}
-		
-		
-		%I-Glied
-		I & \parbox[c][2cm]{3cm}{\input{./tikz/IGlied}}
-		&
-		\begin{tabular}{lll}
-			$\dot{y} = Ku$					
-			& \multicolumn{2}{l}{$y = K \int\limits_{0}^{t}u(\tau)\;d\tau \qquad y(0) = 0 \qquad [K] = sec^{-1}$}										\\
-			$u=1(t)$						& $y=K t$								& \\
-			$G(j \omega)=\frac{K}{j\omega}$ & $\left| G \right| = \frac{K}{\omega}$ & $arg(G)=-\frac{\pi}{2}$ \\
-		\end{tabular}
-		\\ \cline{2-3}
-		& \parbox[c][2cm]{3cm}{\input{./tikz/IGliedStruktur}}
-		&
-		\parbox[c]{3cm}{\input{./tikz/IGliedNyquist}}
-		\parbox[c]{6cm}{\input{./tikz/IGliedBode}} 
-		\\
-		\specialrule{2pt}{0pt}{0pt}
-		
-		
-		%D-Glied
-		D & \parbox[c][2cm]{3cm}{\input{./tikz/DGlied}}
-		&
-		\begin{tabular}{lll}
-			$y = K\dot{u}$					
-			&	$[K] =sec$					& \\
-			$u=1(t)$						& $y=K \delta (t)$						& \\
-			$G(j \omega)=K j\omega$			& $\left| G \right| = K\omega$			& $arg(G)=\frac{\pi}{2}$
-		\end{tabular}
-		\\ \cline{2-3}
-		& \parbox[c][2cm]{3cm}{\input{./tikz/DGliedStruktur}}			
-		&
-		\parbox[c]{3cm}{\input{./tikz/DGliedNyquist}}
-		\parbox[c]{6cm}{\input{./tikz/DGliedBode}} 
-		\\
-		\specialrule{2pt}{0pt}{0pt}
-		
-		\newpage
-		
-		\specialrule{2pt}{0pt}{0pt}
-		
-		%PT1_Glied
-		$PT_1$ & \parbox[c][2cm]{3cm}{\input{./tikz/PT1Glied}}
-		&
-		\begin{tabular}{lll}
-			$T\dot{y}+y=Ku$							& $y(0)=0$									& \\
-			$u=1(t)$								& $y=K \left[ 1-e^{- \frac{t}{T}}\right]$	& \\
-			$G(j \omega)= \frac{K}{1+j\omega T}$	& $\left| G \right| = \frac{K}{\sqrt{1+(\omega T)^2}}$ &
-			$arg(G)=-\arctan(\omega T)$
-		\end{tabular}
-		\\ \cline{2-3}
-		& \parbox[c][2cm]{3cm}{\input{./tikz/PT1GliedStruktur}}	
-		&
-		\parbox[c]{3.7cm}{\input{./tikz/PT1GliedNyquist}}
-		\parbox[c]{6cm}{\input{./tikz/PT1GliedBode}}
-		\\
-		\specialrule{2pt}{0pt}{0pt}
-		
-		
-		%PT2_Glied
-		$PT_2$ &
-		\begin{minipage}{3cm}
-			\input{./tikz/PT2Glied}
-		\end{minipage}
-		&
-		\begin{tabular}{lll}
-			$T^2\ddot{y}+2\zeta T \dot{y}+y=Ku$ & $\ddot{y}+2\zeta\omega_n \dot{y}+\omega_n^2y=K\omega_n^2u$ & \\
-			$y(0)=0$ & $\dot{y}(0)=0$ & $\omega_n=\frac{1}{T}$ \\
-			\multicolumn{3}{l}{
-				$y=K \left[1-\frac{1}{\sqrt{1-\zeta^2}}e^{-\zeta\omega_n t}\sin
-				\left( \sqrt{1-\zeta^2} \omega_n t+arcos(\zeta) \right)\right]$
-			} \\
-			$G(j \omega)= \frac{K}{1+ 2 \zeta (j\omega) T  + (j \omega T)^2}$ & $\left| G \right| = \frac{K}{\sqrt{\left[1+(j\omega
-			T)^2\right]^2+\left[2\zeta \omega T \right]^2}}$ & \\
-			$\arg(G)=-\arctan  \frac{2\zeta \omega T}{1+(j\omega T)^2}$ & $0 \leq\omega T \leq 1$ & \\
-			$\arg(G)=\arctan \frac{2\zeta \omega T}{1+(j \omega T)^2}-\pi$ & $1 \leq\omega T \leq \infty$ & \\
-			
-		\end{tabular}
-		\\ \cline{2-3}
-		& \parbox[c][2cm]{3cm}{\input{./tikz/PT2GliedStruktur}}
-		& \begin{minipage}{3cm}
-		\includegraphics[angle = {-0.3}, width=3cm]{./images/PT2_Nyq.jpg}
-		\end{minipage}
-		\begin{minipage}{9cm}
-		\includegraphics[angle = {0.2}, width=8cm]{./images/PT2_Bode.jpg}
-		\end{minipage} \rule[-5mm]{0mm}{35mm}
-		\\
-		\specialrule{2pt}{0pt}{0pt}
-		
-		
-		%Tt_Glied
-		$T_t$ &
-		\parbox[c][2cm]{3cm}{\input{./tikz/TtGlied}}
-		&
-		\begin{tabular}{lll}
-			$y=\begin{cases}
-				0 & 0<t<T_t \\
-				u(t-T_t) & t \geq T_t
-				\end{cases}$ & & \\
-			$u=1(t)$ & $y=1(t-T_t)$ & \\
-			$G(j \omega)= e^{-j\omega T_t}$ & $\left| G \right| = 1$ & $arg(G)=-\omega T_t$
-		\end{tabular}
-		\\ \cline{2-3}
-		& \parbox[c][2cm]{3cm}{\input{./tikz/TtGliedStruktur}}
-		& 
-		\parbox[c]{3cm}{\input{./tikz/TtGliedNyquist}}
-		\parbox[c]{6cm}{\input{./tikz/TtGliedBode}}
-		\\
-		\specialrule{2pt}{0pt}{0pt}
+\begin{landscape}
+	\thispagestyle{plain}
+
+	\section{LTI-Grundglieder \formelbuch{115 \& 201}}
+	\begin{table}[h!]
+		\centering
+		\begin{longtable}{ c >{\centering}m{3cm} *{2}{ >{\(\displaystyle}c<{\)} } m{4cm} m{4cm} p{5cm}}
+			\toprule[2pt]
+
+			\bfseries Typ &
+			\bfseries Symbol &
+			\textbf{Differentialgleichung} &
+			\textbf{Frequenzgang } G &
+			\bfseries Nyquistdiagramm &
+			\bfseries Bodediagramm &
+			\bfseries Anmerkungen \\
+
+			\midrule[1pt]
+
+			P &
+			\begin{tikzpicture}
+				\node[rtprop] (G) {};
+				\node[anchor = south west] at (G.north west) {\(K\)};
+				\draw[ultra thick, ->] (G.west) ++(-.5,0) node[left] {\(u\)} -- (G.west);
+				\draw[ultra thick, ->] (G.east) -- ++(.5,0) node[right] {\(y\)};
+			\end{tikzpicture}
+			&
+			y = Ku & K
+			\\
+
+			\midrule[1pt]
+
+			T &
+			\begin{tikzpicture}
+				\node[rtdelay] (G) {};
+				\node[anchor = south east] at (G.north east) {\(T_t\)};
+				\draw[ultra thick, ->] (G.west) ++(-.5,0) node[left] {\(u\)} -- (G.west);
+				\draw[ultra thick, ->] (G.east) -- ++(.5,0) node[right] {\(y\)};
+			\end{tikzpicture}
+			&
+			y(t) = \varepsilon(t) u(t - T_t) & e^{-j\omega T_t}
+			\\
+
+			\midrule[1pt]
+
+			PT\(_1\) &
+			\begin{tikzpicture}
+				\node[rtpt1] (G) {};
+				\node[anchor = south west] at (G.north west) {\(K\)};
+				\node[anchor = south east] at (G.north east) {\(T\)};
+				\draw[ultra thick, ->] (G.west) ++(-.5,0) node[left] {\(u\)} -- (G.west);
+				\draw[ultra thick, ->] (G.east) -- ++(.5,0) node[right] {\(y\)};
+			\end{tikzpicture}
+			&
+			T\dot{y} + y = Ku & \frac{K}{j\omega T + 1}
+			\\
+
+			\midrule[1pt]
+
+			PT\(_2\) &
+			\begin{tikzpicture}
+				\node[rtpt2] (G) {};
+				\node[anchor = south west] at (G.north west) {\(K\)};
+				\node[anchor = south] at (G.north) {\(\zeta\)};
+				\node[anchor = south east] at (G.north east) {\(T\)};
+				\draw[ultra thick, ->] (G.west) ++(-.5,0) node[left] {\(u\)} -- (G.west);
+				\draw[ultra thick, ->] (G.east) -- ++(.5,0) node[right] {\(y\)};
+			\end{tikzpicture}
+			&
+			T^2 \ddot{y} + 2\zeta T \dot{y} + y = Ku &
+			\frac{K}{T^2 (j\omega)^2 + 2\zeta T (j\omega) + 1} 
+			\\
+
+			\midrule[1pt]
+
+			I &
+			\begin{tikzpicture}
+				\node[rtint] (G) {};
+				\node[anchor = south west] at (G.north west) {\(K\)};
+				\draw[ultra thick, ->] (G.west) ++(-.5,0) node[left] {\(u\)} -- (G.west);
+				\draw[ultra thick, ->] (G.east) -- ++(.5,0) node[right] {\(y\)};
+			\end{tikzpicture}
+			&
+			\dot{y} = K u & \frac{K}{j\omega}
+			\\
+
+			\midrule[1pt]
+
+			PI &
+			\begin{tikzpicture}
+				\node[rtpi] (G) {};
+				\node[anchor = south west] at (G.north west) {\(K\)};
+				\node[anchor = south east] at (G.north east) {\(T\)};
+				\draw[ultra thick, ->] (G.west) ++(-.5,0) node[left] {\(u\)} -- (G.west);
+				\draw[ultra thick, ->] (G.east) -- ++(.5,0) node[right] {\(y\)};
+			\end{tikzpicture}
+			&
+			y = K_R \left( u + \int_0^t \frac{u ~d\tau}{T} \right) &
+			K \left( 1 + \frac{1}{j\omega T} \right)
+			\\
+
+			\midrule[1pt]
+
+			D &
+			\begin{tikzpicture}
+				\node[rtdiff] (G) {};
+				\node[anchor = south west] at (G.north west) {\(K\)};
+				\draw[ultra thick, ->] (G.west) ++(-.5,0) node[left] {\(u\)} -- (G.west);
+				\draw[ultra thick, ->] (G.east) -- ++(.5,0) node[right] {\(y\)};
+			\end{tikzpicture}
+			&
+			y = K\dot{u} & j\omega K
+			\\
+
+			\midrule[1pt]
+
+			DT\(_1\) &
+			\begin{tikzpicture}
+				\node[rtdt1] (G) {};
+				\node[anchor = south west] at (G.north west) {\(K\)};
+				\node[anchor = south east] at (G.north east) {\(T\)};
+				\draw[ultra thick, ->] (G.west) ++(-.5,0) node[left] {\(u\)} -- (G.west);
+				\draw[ultra thick, ->] (G.east) -- ++(.5,0) node[right] {\(y\)};
+			\end{tikzpicture}
+			&
+			T\dot{y} + y = K\dot{u} & \frac{j\omega K}{1 + j\omega T}
+			\\
+
+			\bottomrule[2pt]
+		\end{longtable}
+	\end{table}
+\end{landscape}
+
+\newpage
+
+\begin{longtable}{|c|c|l|}
+	\specialrule{2pt}{0pt}{0pt}
+	{\bf Typ} & {\it Symbol} & {\it Gleichung, DGL}\\
+	 & & {\it Sprungantwort}\\
+	 & & {\it Frequenzgang, Betrag und Argument}\\ \cline{2-3}
+	 & Strukturbild & {\it Nyquistdiagramm} -- {\it Bodediagramm}\\
+	\specialrule{2pt}{0pt}{0pt}
 	
-	%DT1_Glied
-		$DT_1$ &
-		\parbox[c][2cm]{3cm}{\input{./tikz/DT1GliedStruktur}}
-		&
-		\begin{tabular}{lll}
-			$G(j \omega)= G_D \cdot G_{PT_1} = j\omega T_V \dfrac{1}{1+j\omega T_C} = \dfrac{T_V}{T_C}\left(1- \dfrac{1}{1+ j\omega T_C} \right)$ \\
-		\end{tabular}\\
-		\specialrule{2pt}{0pt}{0pt}
-			\end{longtable}
+	
+	%P-Glied
+	P
+	&
+	\begin{tikzpicture}
+		\node[rtprop] (P) {};
+		\node[anchor = south west] at (P.north west) {\(K\)};
+		\draw[ultra thick, ->] (P.west) ++(-.5,0) node[left] {\(u\)} -- (P.west);
+		\draw[ultra thick, ->] (P.east) -- ++(.5,0) node[right] {\(y\)};
+	\end{tikzpicture}
+	&
+	% {\[\!\begin{aligned*}
+	% 	y &= Ku \\
+	% 	y_\varepsilon &= K\varepsilon \\
+	% 	G(j\omega) &= K & |G| &= K & \arg G = 0 \\
+	% \end{aligned}\]}
+	\\
+	\cline{2-3}
+	& \parbox[c][2cm]{3cm}{\input{./tikz/PGliedStruktur}}
+	& 
+	\parbox[c]{3cm}{\input{./tikz/PGliedNyquist}} \quad
+	\parbox[c]{6cm}{\input{./tikz/PGliedBode}}			 
+	\\
+	\specialrule{2pt}{0pt}{0pt}
+	
+	
+	%I-Glied
+	I & \parbox[c][2cm]{3cm}{\input{./tikz/IGlied}}
+	&
+	\begin{tabular}{lll}
+		$\dot{y} = Ku$					
+		& \multicolumn{2}{l}{$y = K \int\limits_{0}^{t}u(\tau)\;d\tau \qquad y(0) = 0 \qquad [K] = sec^{-1}$}										\\
+		$u=1(t)$						& $y=K t$								& \\
+		$G(j \omega)=\frac{K}{j\omega}$ & $\left| G \right| = \frac{K}{\omega}$ & $arg(G)=-\frac{\pi}{2}$ \\
+	\end{tabular}
+	\\ \cline{2-3}
+	& \parbox[c][2cm]{3cm}{\input{./tikz/IGliedStruktur}}
+	&
+	\parbox[c]{3cm}{\input{./tikz/IGliedNyquist}}
+	\parbox[c]{6cm}{\input{./tikz/IGliedBode}} 
+	\\
+	\specialrule{2pt}{0pt}{0pt}
+	
+	
+	%D-Glied
+	D & \parbox[c][2cm]{3cm}{\input{./tikz/DGlied}}
+	&
+	\begin{tabular}{lll}
+		$y = K\dot{u}$					
+		&	$[K] =sec$					& \\
+		$u=1(t)$						& $y=K \delta (t)$						& \\
+		$G(j \omega)=K j\omega$			& $\left| G \right| = K\omega$			& $arg(G)=\frac{\pi}{2}$
+	\end{tabular}
+	\\ \cline{2-3}
+	& \parbox[c][2cm]{3cm}{\input{./tikz/DGliedStruktur}}			
+	&
+	\parbox[c]{3cm}{\input{./tikz/DGliedNyquist}}
+	\parbox[c]{6cm}{\input{./tikz/DGliedBode}} 
+	\\
+	\specialrule{2pt}{0pt}{0pt}
+	
+	\newpage
+	
+	\specialrule{2pt}{0pt}{0pt}
+	
+	%PT1_Glied
+	$PT_1$ & \parbox[c][2cm]{3cm}{\input{./tikz/PT1Glied}}
+	&
+	\begin{tabular}{lll}
+		$T\dot{y}+y=Ku$							& $y(0)=0$									& \\
+		$u=1(t)$								& $y=K \left[ 1-e^{- \frac{t}{T}}\right]$	& \\
+		$G(j \omega)= \frac{K}{1+j\omega T}$	& $\left| G \right| = \frac{K}{\sqrt{1+(\omega T)^2}}$ &
+		$arg(G)=-\arctan(\omega T)$
+	\end{tabular}
+	\\ \cline{2-3}
+	& \parbox[c][2cm]{3cm}{\input{./tikz/PT1GliedStruktur}}	
+	&
+	\parbox[c]{3.7cm}{\input{./tikz/PT1GliedNyquist}}
+	\parbox[c]{6cm}{\input{./tikz/PT1GliedBode}}
+	\\
+	\specialrule{2pt}{0pt}{0pt}
+	
+	
+	%PT2_Glied
+	$PT_2$ &
+	\begin{minipage}{3cm}
+		\input{./tikz/PT2Glied}
+	\end{minipage}
+	&
+	\begin{tabular}{lll}
+		$T^2\ddot{y}+2\zeta T \dot{y}+y=Ku$ & $\ddot{y}+2\zeta\omega_n \dot{y}+\omega_n^2y=K\omega_n^2u$ & \\
+		$y(0)=0$ & $\dot{y}(0)=0$ & $\omega_n=\frac{1}{T}$ \\
+		\multicolumn{3}{l}{
+			$y=K \left[1-\frac{1}{\sqrt{1-\zeta^2}}e^{-\zeta\omega_n t}\sin
+			\left( \sqrt{1-\zeta^2} \omega_n t+arcos(\zeta) \right)\right]$
+		} \\
+		$G(j \omega)= \frac{K}{1+ 2 \zeta (j\omega) T  + (j \omega T)^2}$ & $\left| G \right| = \frac{K}{\sqrt{\left[1+(j\omega
+		T)^2\right]^2+\left[2\zeta \omega T \right]^2}}$ & \\
+		$\arg(G)=-\arctan  \frac{2\zeta \omega T}{1+(j\omega T)^2}$ & $0 \leq\omega T \leq 1$ & \\
+		$\arg(G)=\arctan \frac{2\zeta \omega T}{1+(j \omega T)^2}-\pi$ & $1 \leq\omega T \leq \infty$ & \\
+		
+	\end{tabular}
+	\\ \cline{2-3}
+	& \parbox[c][2cm]{3cm}{\input{./tikz/PT2GliedStruktur}}
+	& \begin{minipage}{3cm}
+	\includegraphics[angle = {-0.3}, width=3cm]{./images/PT2_Nyq.jpg}
+	\end{minipage}
+	\begin{minipage}{9cm}
+	\includegraphics[angle = {0.2}, width=8cm]{./images/PT2_Bode.jpg}
+	\end{minipage} \rule[-5mm]{0mm}{35mm}
+	\\
+	\specialrule{2pt}{0pt}{0pt}
+	
+	
+	%Tt_Glied
+	$T_t$ &
+	\parbox[c][2cm]{3cm}{\input{./tikz/TtGlied}}
+	&
+	\begin{tabular}{lll}
+		$y=\begin{cases}
+			0 & 0<t<T_t \\
+			u(t-T_t) & t \geq T_t
+			\end{cases}$ & & \\
+		$u=1(t)$ & $y=1(t-T_t)$ & \\
+		$G(j \omega)= e^{-j\omega T_t}$ & $\left| G \right| = 1$ & $arg(G)=-\omega T_t$
+	\end{tabular}
+	\\ \cline{2-3}
+	& \parbox[c][2cm]{3cm}{\input{./tikz/TtGliedStruktur}}
+	& 
+	\parbox[c]{3cm}{\input{./tikz/TtGliedNyquist}}
+	\parbox[c]{6cm}{\input{./tikz/TtGliedBode}}
+	\\
+	\specialrule{2pt}{0pt}{0pt}
+
+%DT1_Glied
+	$DT_1$ &
+	\parbox[c][2cm]{3cm}{\input{./tikz/DT1GliedStruktur}}
+	&
+	\begin{tabular}{lll}
+		$G(j \omega)= G_D \cdot G_{PT_1} = j\omega T_V \dfrac{1}{1+j\omega T_C} = \dfrac{T_V}{T_C}\left(1- \dfrac{1}{1+ j\omega T_C} \right)$ \\
+	\end{tabular}\\
+	\specialrule{2pt}{0pt}{0pt}
+		\end{longtable}
 
 
 
