--- a/tex/pid.tex
+++ b/tex/pid.tex
@@ -41,7 +41,7 @@ Der PD-Regler entspricht dem inversen PT\(_1\)-Glied. Meistens wird jedoch der P
 		\]
 	\item[Sprungantwort]
 		\[
-			u(t) = K_R \left( 1 + \frac{T_V}{T_C} \cdot \e^{-t/T_C} \right)
+			u(t) = K_R \left( 1 + \frac{T_V}{T_C} \cdot e^{-t/T_C} \right)
 			\text{ wenn } e(t) = 1(t)
 		\]
 	\item[\"Ubertragungsfunktion] \(T_V > T_C\)
