--- a/RegT2.tex
+++ b/RegT2.tex
@@ -14,10 +14,12 @@
 ]{doclicense}
 
 \usepackage{pdflscape}
-\usepackage{longtable}
+\usepackage{tabularx}
 \usepackage{booktabs}
 \usepackage{multicol}
 \usepackage{enumitem}
+
+\usepackage{longtable}
 
 \newcommand\formelbuch[1]{\texttt{\textcolor{red!60!black}{\small S#1}}}
 
