--- a/tex/grundglieder.tex
+++ b/tex/grundglieder.tex
@@ -1,10 +1,50 @@
+\newgeometry{hmargin = 4mm, vmargin = 2cm}
+\thispagestyle{empty}
 \begin{landscape}
-	\thispagestyle{plain}
-
 	\section{LTI-Grundglieder \formelbuch{115 \& 201}}
 	\begin{table}[h!]
+		\usetikzlibrary{arrows}
+		\usetikzlibrary{positioning}
+		\usetikzlibrary{decorations.markings}
+		\usetikzlibrary{decorations.pathreplacing}
+		\tikzset{
+			font = \small,
+			axis/.style = {
+				thick, ->
+			},
+			locus/.style = {
+				ultra thick, hsr-blue,
+				postaction = {
+					decorate, decoration = {
+						markings,
+						mark = between positions .2 and .92 step 6mm  with {%
+							\draw[ultra thick, ->] (0,0) -- ++(1pt,0);
+						},
+					},
+				},
+			},
+			dot/.style = {
+				circle, draw = hsr-blue, thick,
+				fill = white,
+				inner sep = 0pt,
+				minimum size = 1mm,
+			},
+			indbrace/.style = {
+				gray,
+				thick,
+				decorate,
+				decoration = {
+					brace,
+					raise = 5pt,
+				},
+			},
+		}
 		\centering
-		\begin{longtable}{ c >{\centering}m{3cm} *{2}{ >{\(\displaystyle}c<{\)} } m{4cm} m{4cm} p{5cm}}
+		\begin{tabularx}{\linewidth}{%
+				c >{\centering}m{4cm}%
+				*{2}{ >{\(\displaystyle}c<{\)} }%
+				m{3.5cm} m{4cm} X%
+		}
 			\toprule[2pt]
 
 			\bfseries Typ &
@@ -17,6 +57,9 @@
 
 			\midrule[1pt]
 
+			%
+			% Proportional
+			%
 			P &
 			\begin{tikzpicture}
 				\node[rtprop] (G) {};
@@ -26,10 +69,21 @@
 			\end{tikzpicture}
 			&
 			y = Ku & K
+			&
+			\begin{tikzpicture}
+				\draw[axis] (-.2,0) -- (1.8,0) node[right] {Re};
+				\draw[axis] (0,-.5) -- (0,.3) node[above] {Im};
+				\coordinate (P) at (1.5,0);
+				\draw[indbrace] (P) -- node[midway, below = 7pt] {\(K\)} (0,0);
+				\node[dot] at (P) {};
+			\end{tikzpicture}
 			\\
 
 			\midrule[1pt]
 
+			%
+			% Delay
+			%
 			T &
 			\begin{tikzpicture}
 				\node[rtdelay] (G) {};
@@ -39,10 +93,21 @@
 			\end{tikzpicture}
 			&
 			y(t) = \varepsilon(t) u(t - T_t) & e^{-j\omega T_t}
+			&
+			\begin{tikzpicture}
+				\draw[axis] (-1,0) -- (1,0) node[right] {Re};
+				\draw[axis] (0,-1) -- (0,1) node[above] {Im};
+				\draw[locus] (.75,0) arc (360:0:.75);
+				\node[dot] at (.75,0) {};
+				\node[below right = .5mm] at (.75,0) {\(\omega = 2\pi n\)};
+			\end{tikzpicture}
 			\\
 
 			\midrule[1pt]
 
+			%
+			% PT1
+			%
 			PT\(_1\) &
 			\begin{tikzpicture}
 				\node[rtpt1] (G) {};
@@ -53,10 +118,25 @@
 			\end{tikzpicture}
 			&
 			T\dot{y} + y = Ku & \frac{K}{j\omega T + 1}
+			&
+			\begin{tikzpicture}
+				\draw[axis] (-.2,0) -- (1.8,0) node[right] {Re};
+				\draw[axis] (0,-1) -- (0,.6) node[above] {Im};
+				\draw[locus] (1.5,0) arc (360:180:.75);
+				\draw[indbrace] (0,0) -- node[midway, above = 7pt] {\(K\)} (1.5,0);
+				\draw
+					(0,0) node[dot] {} % node[above left, anchor = south east] {\(\omega\to\infty\)}
+					(1.5,0) node[dot] {} node[above right = 2pt, anchor = south west] {\(\omega = 0\)} 
+					(.75,-.75) node[dot] {} node[below] {\(\omega = 1/T\)}
+				;
+			\end{tikzpicture}
 			\\
 
 			\midrule[1pt]
 
+			%
+			% PT2
+			%
 			PT\(_2\) &
 			\begin{tikzpicture}
 				\node[rtpt2] (G) {};
@@ -69,10 +149,31 @@
 			&
 			T^2 \ddot{y} + 2\zeta T \dot{y} + y = Ku &
 			\frac{K}{T^2 (j\omega)^2 + 2\zeta T (j\omega) + 1} 
+			&
+			\begin{tikzpicture}
+				\draw[axis] (-.2,0) -- (1.8,0) node[right] {Re};
+				\draw[axis] (0,-1) -- (0,.6) node[above] {Im};
+
+				\draw[locus] (1.5,0) 
+					to[out = -90, in = 0] (.75,-.8)
+					to[out = 180, in = -30] (0, -.7)
+					to[out = 160, in = 190] (0,0)
+				;
+
+				\draw[indbrace] (0,0) -- node[midway, above = 7pt] {\(K\)} (1.5,0);
+				\draw
+					(0,0) node[dot] {} % node[above left, anchor = south east] {\(\omega\to\infty\)}
+					(1.5,0) node[dot] {} node[above right = 2pt, anchor = south west] {\(\omega = 0\)} 
+					(0,-.7) node[dot] {} node[below left = 4pt, anchor = north west] {\(\omega = 1/T\)}
+				;
+			\end{tikzpicture}
 			\\
 
 			\midrule[1pt]
 
+			%
+			% Integrator
+			%
 			I &
 			\begin{tikzpicture}
 				\node[rtint] (G) {};
@@ -82,10 +183,24 @@
 			\end{tikzpicture}
 			&
 			\dot{y} = K u & \frac{K}{j\omega}
+			&
+			\begin{tikzpicture}
+				\draw[axis] (-.2,0) -- (1.8,0) node[right] {Re};
+				\draw[axis] (0,-1) -- (0,.3) node[above] {Im};
+
+				\draw[locus] (0,-1) -- (0,0);
+				\draw
+					(0,0) node[dot] {} node[above right = 2pt] {\(\omega\to\infty\)}
+					(0,-.5) node[dot] {} node[left] {\(j\)}
+				;
+			\end{tikzpicture}
 			\\
 
 			\midrule[1pt]
 
+			%
+			% Proportional with Integrator
+			%
 			PI &
 			\begin{tikzpicture}
 				\node[rtpi] (G) {};
@@ -97,10 +212,24 @@
 			&
 			y = K_R \left( u + \int_0^t \frac{u ~d\tau}{T} \right) &
 			K \left( 1 + \frac{1}{j\omega T} \right)
+			&
+			\begin{tikzpicture}
+				\draw[axis] (-.2,0) -- (1.8,0) node[right] {Re};
+				\draw[axis] (0,-1) -- (0,.4) node[above] {Im};
+
+				\draw[locus] (.7,-1) -- (.7,0);
+				\draw[indbrace] (0,0) -- node[midway, above = 7pt] {\(K\)} (.7,0);
+				\draw
+					(.7,0) node[dot] {} node[above right = 2pt] {\(\omega\to\infty\)}
+				;
+			\end{tikzpicture}
 			\\
 
 			\midrule[1pt]
 
+			%
+			% Differentiator
+			%
 			D &
 			\begin{tikzpicture}
 				\node[rtdiff] (G) {};
@@ -110,10 +239,26 @@
 			\end{tikzpicture}
 			&
 			y = K\dot{u} & j\omega K
+			&
+			\begin{tikzpicture}
+				\draw[axis] (-.2,0) -- (1.8,0) node[right] {Re};
+				\draw[axis] (0,-.3) -- (0,1) node[above] {Im};
+
+				\draw[locus] (0,0) -- (0,1);
+				\draw
+					(0,0) node[dot] {} node[below right = 2pt] {\(\omega = 0\)}
+				;
+			\end{tikzpicture}
+			&
+			&
+			Nicht realisierbar.
 			\\
 
 			\midrule[1pt]
 
+			%
+			% Real differentiator
+			%
 			DT\(_1\) &
 			\begin{tikzpicture}
 				\node[rtdt1] (G) {};
@@ -124,190 +269,32 @@
 			\end{tikzpicture}
 			&
 			T\dot{y} + y = K\dot{u} & \frac{j\omega K}{1 + j\omega T}
+			&
+			\begin{tikzpicture}
+				\draw[axis] (-.2,0) -- (1.8,0) node[right] {Re};
+				\draw[axis] (0,-.5) -- (0,1.1) node[above] {Im};
+				\draw[locus] (0,0) arc (180:0:.75);
+				\draw[indbrace] (1.5,0) -- node[midway, below = 7pt] {\(K\)} (0,0);
+				\draw
+					(0,0) node[dot] {}
+					(1.5,0) node[dot] {} node[below right = 2pt, anchor = north west] {\(\omega = 0\)} 
+					(.75,.75) node[dot] {} node[above] {\(\omega = 1/T\)}
+				;
+			\end{tikzpicture}
 			\\
 
 			\bottomrule[2pt]
-		\end{longtable}
+		\end{tabularx}
 	\end{table}
 \end{landscape}
+\restoregeometry
 
-\newpage
+\subsection{\"Aquivalente Glieder}
 
-\begin{longtable}{|c|c|l|}
-	\specialrule{2pt}{0pt}{0pt}
-	{\bf Typ} & {\it Symbol} & {\it Gleichung, DGL}\\
-	 & & {\it Sprungantwort}\\
-	 & & {\it Frequenzgang, Betrag und Argument}\\ \cline{2-3}
-	 & Strukturbild & {\it Nyquistdiagramm} -- {\it Bodediagramm}\\
-	\specialrule{2pt}{0pt}{0pt}
-	
-	
-	%P-Glied
-	P
-	&
-	\begin{tikzpicture}
-		\node[rtprop] (P) {};
-		\node[anchor = south west] at (P.north west) {\(K\)};
-		\draw[ultra thick, ->] (P.west) ++(-.5,0) node[left] {\(u\)} -- (P.west);
-		\draw[ultra thick, ->] (P.east) -- ++(.5,0) node[right] {\(y\)};
-	\end{tikzpicture}
-	&
-	% {\[\!\begin{aligned*}
-	% 	y &= Ku \\
-	% 	y_\varepsilon &= K\varepsilon \\
-	% 	G(j\omega) &= K & |G| &= K & \arg G = 0 \\
-	% \end{aligned}\]}
-	\\
-	\cline{2-3}
-	& \parbox[c][2cm]{3cm}{\input{./tikz/PGliedStruktur}}
-	& 
-	\parbox[c]{3cm}{\input{./tikz/PGliedNyquist}} \quad
-	\parbox[c]{6cm}{\input{./tikz/PGliedBode}}			 
-	\\
-	\specialrule{2pt}{0pt}{0pt}
-	
-	
-	%I-Glied
-	I & \parbox[c][2cm]{3cm}{\input{./tikz/IGlied}}
-	&
-	\begin{tabular}{lll}
-		$\dot{y} = Ku$					
-		& \multicolumn{2}{l}{$y = K \int\limits_{0}^{t}u(\tau)\;d\tau \qquad y(0) = 0 \qquad [K] = sec^{-1}$}										\\
-		$u=1(t)$						& $y=K t$								& \\
-		$G(j \omega)=\frac{K}{j\omega}$ & $\left| G \right| = \frac{K}{\omega}$ & $arg(G)=-\frac{\pi}{2}$ \\
-	\end{tabular}
-	\\ \cline{2-3}
-	& \parbox[c][2cm]{3cm}{\input{./tikz/IGliedStruktur}}
-	&
-	\parbox[c]{3cm}{\input{./tikz/IGliedNyquist}}
-	\parbox[c]{6cm}{\input{./tikz/IGliedBode}} 
-	\\
-	\specialrule{2pt}{0pt}{0pt}
-	
-	
-	%D-Glied
-	D & \parbox[c][2cm]{3cm}{\input{./tikz/DGlied}}
-	&
-	\begin{tabular}{lll}
-		$y = K\dot{u}$					
-		&	$[K] =sec$					& \\
-		$u=1(t)$						& $y=K \delta (t)$						& \\
-		$G(j \omega)=K j\omega$			& $\left| G \right| = K\omega$			& $arg(G)=\frac{\pi}{2}$
-	\end{tabular}
-	\\ \cline{2-3}
-	& \parbox[c][2cm]{3cm}{\input{./tikz/DGliedStruktur}}			
-	&
-	\parbox[c]{3cm}{\input{./tikz/DGliedNyquist}}
-	\parbox[c]{6cm}{\input{./tikz/DGliedBode}} 
-	\\
-	\specialrule{2pt}{0pt}{0pt}
-	
-	\newpage
-	
-	\specialrule{2pt}{0pt}{0pt}
-	
-	%PT1_Glied
-	$PT_1$ & \parbox[c][2cm]{3cm}{\input{./tikz/PT1Glied}}
-	&
-	\begin{tabular}{lll}
-		$T\dot{y}+y=Ku$							& $y(0)=0$									& \\
-		$u=1(t)$								& $y=K \left[ 1-e^{- \frac{t}{T}}\right]$	& \\
-		$G(j \omega)= \frac{K}{1+j\omega T}$	& $\left| G \right| = \frac{K}{\sqrt{1+(\omega T)^2}}$ &
-		$arg(G)=-\arctan(\omega T)$
-	\end{tabular}
-	\\ \cline{2-3}
-	& \parbox[c][2cm]{3cm}{\input{./tikz/PT1GliedStruktur}}	
-	&
-	\parbox[c]{3.7cm}{\input{./tikz/PT1GliedNyquist}}
-	\parbox[c]{6cm}{\input{./tikz/PT1GliedBode}}
-	\\
-	\specialrule{2pt}{0pt}{0pt}
-	
-	
-	%PT2_Glied
-	$PT_2$ &
-	\begin{minipage}{3cm}
-		\input{./tikz/PT2Glied}
-	\end{minipage}
-	&
-	\begin{tabular}{lll}
-		$T^2\ddot{y}+2\zeta T \dot{y}+y=Ku$ & $\ddot{y}+2\zeta\omega_n \dot{y}+\omega_n^2y=K\omega_n^2u$ & \\
-		$y(0)=0$ & $\dot{y}(0)=0$ & $\omega_n=\frac{1}{T}$ \\
-		\multicolumn{3}{l}{
-			$y=K \left[1-\frac{1}{\sqrt{1-\zeta^2}}e^{-\zeta\omega_n t}\sin
-			\left( \sqrt{1-\zeta^2} \omega_n t+arcos(\zeta) \right)\right]$
-		} \\
-		$G(j \omega)= \frac{K}{1+ 2 \zeta (j\omega) T  + (j \omega T)^2}$ & $\left| G \right| = \frac{K}{\sqrt{\left[1+(j\omega
-		T)^2\right]^2+\left[2\zeta \omega T \right]^2}}$ & \\
-		$\arg(G)=-\arctan  \frac{2\zeta \omega T}{1+(j\omega T)^2}$ & $0 \leq\omega T \leq 1$ & \\
-		$\arg(G)=\arctan \frac{2\zeta \omega T}{1+(j \omega T)^2}-\pi$ & $1 \leq\omega T \leq \infty$ & \\
-		
-	\end{tabular}
-	\\ \cline{2-3}
-	& \parbox[c][2cm]{3cm}{\input{./tikz/PT2GliedStruktur}}
-	& \begin{minipage}{3cm}
-	\includegraphics[angle = {-0.3}, width=3cm]{./images/PT2_Nyq.jpg}
-	\end{minipage}
-	\begin{minipage}{9cm}
-	\includegraphics[angle = {0.2}, width=8cm]{./images/PT2_Bode.jpg}
-	\end{minipage} \rule[-5mm]{0mm}{35mm}
-	\\
-	\specialrule{2pt}{0pt}{0pt}
-	
-	
-	%Tt_Glied
-	$T_t$ &
-	\parbox[c][2cm]{3cm}{\input{./tikz/TtGlied}}
-	&
-	\begin{tabular}{lll}
-		$y=\begin{cases}
-			0 & 0<t<T_t \\
-			u(t-T_t) & t \geq T_t
-			\end{cases}$ & & \\
-		$u=1(t)$ & $y=1(t-T_t)$ & \\
-		$G(j \omega)= e^{-j\omega T_t}$ & $\left| G \right| = 1$ & $arg(G)=-\omega T_t$
-	\end{tabular}
-	\\ \cline{2-3}
-	& \parbox[c][2cm]{3cm}{\input{./tikz/TtGliedStruktur}}
-	& 
-	\parbox[c]{3cm}{\input{./tikz/TtGliedNyquist}}
-	\parbox[c]{6cm}{\input{./tikz/TtGliedBode}}
-	\\
-	\specialrule{2pt}{0pt}{0pt}
+\subsection{PT\(_2\)--Glied}
+\subsubsection{D\"ampfung}
+\subsubsection{Ersatzmodell}
 
-%DT1_Glied
-	$DT_1$ &
-	\parbox[c][2cm]{3cm}{\input{./tikz/DT1GliedStruktur}}
-	&
-	\begin{tabular}{lll}
-		$G(j \omega)= G_D \cdot G_{PT_1} = j\omega T_V \dfrac{1}{1+j\omega T_C} = \dfrac{T_V}{T_C}\left(1- \dfrac{1}{1+ j\omega T_C} \right)$ \\
-	\end{tabular}\\
-	\specialrule{2pt}{0pt}{0pt}
-		\end{longtable}
-
-
-
-\subsection{D-Glied  / $\text{DT}_1$-Glied}
-Der Differenzierer erzeugt ein Korrektursignal im voraus.
-Nachteilig ist, wenn die Regelgrösse verrauscht ist, dann werden die hochfrequenten Störsignale durch die Ableitung verstärkt.
-Ein LTI-System, welches ohne D-Glied darstellbar ist, gegebenenfalls durch Umformung des Blockdiagramms, heisst realisierbar.
-In der Realität wird meistens kein reines D-Glied sondern ein $DT_1$-Glied verwendet:
-
-\begin{tabular}{|l||lll| l}
-  \cline{1-4}
-	\parbox[c][2cm]{3cm}{\input{./tikz/DSymbol}} &
-	\parbox[c][2cm]{4.5cm}{\input{./tikz/DT1GliedBlockdiagramm}} &
-	$\Rightarrow$ &
-	\parbox[c][2cm]{3cm}{\input{./tikz/DT1GliedStruktur}} &
-	\fbox{$G_{DT_1}(j\omega) = \frac{j\omega T_V}{1+ j\omega T_C} = \frac{T_V}{T_C}\left(1- \frac{1}{1+j\omega T_C} \right) $}
-	\\
-	$D$-Glied &
-	$D$-Glied \qquad $PT_1$-Glied & &
-	$DT_1$-Glied \\
-  \cline{1-4}
-\end{tabular}
-
-\subsection{PT$_2$-Glied}
 \subsubsection{Parameter der Sprungantwort}
 \renewcommand{\arraystretch}{1.8}
 \begin{tabular}{|m{7cm}|m{1cm}m{0.5cm}m{8cm}}
