Fix empirical table* width

--- a/RegT2.tex
+++ b/RegT2.tex
@@ -37,14 +37,14 @@
 
 \newpage
 
-\input{tex/grundglieder} %% TODO: fix this table
+\input{tex/grundglieder}
 \twocolumn
 \input{tex/stabilitaet}
 \input{tex/pid}
 \onecolumn
 
 \newgeometry{hmargin = 1.2cm, vmargin = 2cm}
-\input{tex/bode}	
+\input{tex/bode}
 \restoregeometry
 
 
