Start PT1 step response diagram

--- a/RegT2.tex
+++ b/RegT2.tex
@@ -20,6 +20,7 @@
 \usepackage{multicol}
 \usepackage{enumitem}
 \usepackage{longtable}
+\usepackage{float}
 
 \newcommand\formelbuch[1]{\texttt{\textcolor{red!60!black}{\small S#1}}}
 
