--- a/tex/grundglieder.tex
+++ b/tex/grundglieder.tex
@@ -276,7 +276,7 @@
 			\draw[indbrace] (1.5,0) -- node[midway, below = 7pt] {\(K\)} (0,0);
 			\draw
 				(0,0) node[dot] {}
-				(1.5,0) node[dot] {} node[below right = 2pt, anchor = north west] {\(\omega = 0\)} 
+				(1.5,0) node[dot] {} node[below right = 2pt, anchor = north west] {\(\omega\to\infty\)} 
 				(.75,.75) node[dot] {} node[above] {\(\omega = 1/T\)}
 			;
 		\end{tikzpicture}
