Small adjustment in PT2 step response diagram

--- a/tex/grundglieder.tex
+++ b/tex/grundglieder.tex
@@ -676,7 +676,7 @@
 					;
 
 					% text
-					\node[above, xshift = 3mm, hsr-blue, fill = white] at (Tn2 |- O) {\(\displaystyle
+					\node[above = 1mm, xshift = 3mm, hsr-blue, fill = white] at (Tn2 |- O) {\(\displaystyle
 						K \left[ 1 - e^{-\zeta t / T} \left(
 							\cos(\omega_n t) +
 							\zeta / \sqrt{1 - \zeta^2} \sin(\omega_n t)
